--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        	<li class="nav-item"><a href="index.html" class="nav-link pl-0">Heim</a></li>
+	        	<li class="nav-item"><a href="index2.html" class="nav-link pl-0">Heim</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">Über uns</a></li>
 	        	<li class="nav-item active"><a href="project.html" class="nav-link">Hypothek</a></li>
 	        	<li class="nav-item"><a href="services.html" class="nav-link">Dienstleistungen</a></li>
