--- a/index2.html
+++ b/index2.html
@@ -710,14 +710,14 @@
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-<!-- button generation date: 2023-01-31 version: 2.0.4 -->
-<a class="start_chat_button" href="#"><img src="https://demo.spitch.chat/button.php?location=Musterbank2" border="0"/></a>
+<!-- button generation date: 2022-10-02 version: 2.0.6 -->
+<a class="start_chat_button" href="#"><img src="https://demo.spitch.chat/button.php?location=FAQKanton" border="0"/></a>
 <script type="text/javascript">
 
   chatLocationData = {
     accountName: "demo",
     domain: "demo.spitch.chat",
-    location: "Musterbank2"
+    location: "FAQKanton"
   };
   (function () {
       var s = document.createElement("script");
